Merged V4.1-BUG-FIX to HEAD    44765: ALF-17164: Fix failing build in case build is not run in continuous mode    44769: ALF-17097 60k Site Performance: Admin Console | Groups | Browse Groups (include sys groups): Results isn't appeared.       - Group page now supports search and browse of large volumes of groups. Tested up to 300,000 sites (60k sites).         Previously this would not return.       - In order to support large volumes of groups it is not practical to search for all root groups.         A functional change has taken place to fix this issue.         [Browse] (which initially displayed only root groups) now uses the search value entered by the user and the same         query as [Search]. It could be argued that the browse functionality was not very practical anyway if there were         a large number of root groups as the user would have to page through all the pages one at a time to get to the         required group in order to add a new sub group. As a result of this change it is now possible to get to the         required group much faster. As the 'browse' function uses the search value and Include System Groups checkbox         (it already used the checkbox value) it made little sense to revert to the Search results when either of these         is changed. As this was taking place, this has now been changed too. The [Search] and [Browse] options both now         use the authority canned query which has been enhanced to use the sortBy field supplied by the UI.       - Uses the authority canned query for [Search] and [Browse] searches on the Groups page.       - Canned query may sort on "shortName", "displayName" or "authorityName"       - Filter on displayName uses regular expressions to support ? and * wildcards       - Canned query returns fewer (unused) columns to speed up fetch time.       - Canned query no longer joins to alf_store as none of the values were used.    44772: CIFS Gedit support - rename open files.    44776: ALF-17164: Fix fail