@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2005-2011 Alfresco Software Limited.
+ * Copyright (C) 2005-2012 Alfresco Software Limited.
  *
  * This file is part of Alfresco
  *
@@ -23,6 +23,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.regex.Pattern;
 
 import org.alfresco.query.CannedQueryParameters;
 import org.alfresco.query.CannedQuerySortDetails;
@@ -49,6 +50,10 @@ public class GetAuthoritiesCannedQuery extends AbstractCannedQueryPermissions<Au
     private static final String QUERY_NAMESPACE = "alfresco.query.authorities";
     private static final String QUERY_SELECT_GET_AUTHORITIES = "select_GetAuthoritiesCannedQuery";
     
+    static final String DISPLAY_NAME = "displayName";
+    private static final String SHORT_NAME = "shortName";
+    private static final String AUTHORITY_NAME = "authorityName";
+
     private CannedQueryDAO cannedQueryDAO;
     private TenantService tenantService;
     
@@ -74,7 +79,7 @@ public class GetAuthoritiesCannedQuery extends AbstractCannedQueryPermissions<Au
         
         // Get filter details
         final AuthorityType type = params.getType();
-        final String nameFilter = params.getDisplayNameFilter();
+        final Pattern nameFilter = getPattern(params.getDisplayNameFilter());
         
         // filtered - note: sorting and permissions will be applied post query
         final List<AuthorityInfo> auths = new ArrayList<AuthorityInfo>(100);
@@ -106,13 +111,49 @@ public class GetAuthoritiesCannedQuery extends AbstractCannedQueryPermissions<Au
         return auths;
     }
     
+    // Gets a regex pattern from the search value
+    private Pattern getPattern(String searchValue)
+    {
+        if (searchValue == null)
+        {
+            return null;
+        }
+        
+        // Escapes: \ with \\     and     . with \.
+        // Replaces ? with .      and     * with .*
+        searchValue = "^"+searchValue.replaceAll("\\\\", "\\\\\\\\").replaceAll("\\.", "\\\\.").replaceAll("\\?", ".").replaceAll("\\*", ".*");
+        return Pattern.compile(searchValue, Pattern.CASE_INSENSITIVE);
+    }
+    
     private class AuthComparator implements Comparator<AuthorityInfo>
     {
+        private boolean sortByDisplayName;
+        private boolean sortByShortName;
         private SortOrder sortOrder;
         private Collator collator;
         
-        public AuthComparator(SortOrder sortOrder)
+        public AuthComparator(String fieldName, SortOrder sortOrder)
         {
+            if (DISPLAY_NAME.equals(fieldName))
+            {
+                sortByDisplayName = true;
+                sortByShortName = false;
+            }
+            else if (SHORT_NAME.equals(fieldName))
+            {
+                sortByDisplayName = false;
+                sortByShortName = true;
+            }
+            else if (SHORT_NAME.equals(fieldName))
+            {
+                sortByDisplayName = false;
+                sortByShortName = false;
+            }
+            else
+            {
+                throw new IllegalArgumentException("Authorities should be sorted by "+DISPLAY_NAME+", "+AUTHORITY_NAME+" or "+SHORT_NAME+". Asked use "+fieldName);
+            }
+                
             this.sortOrder = sortOrder;
             this.collator = Collator.getInstance(); // note: currently default locale
         }
@@ -128,8 +169,19 @@ public class GetAuthoritiesCannedQuery extends AbstractCannedQueryPermissions<Au
                 auth2 = auth1In;
             }
             
-            String s1 = auth1.getAuthorityDisplayName();
-            String s2 = auth2.getAuthorityDisplayName();
+            String s1 = null;
+            String s2 = null;
+            
+            if (sortByDisplayName)
+            {
+                s1 = auth1.getAuthorityDisplayName();
+                s2 = auth2.getAuthorityDisplayName();
+            }
+            else if (sortByShortName)
+            {
+                s1 = auth1.getShortName();
+                s2 = auth2.getShortName();
+            }
             
             if (s1 == null)
             {
@@ -169,14 +221,14 @@ public class GetAuthoritiesCannedQuery extends AbstractCannedQueryPermissions<Au
         if (sortPairs.size() > 0)
         {
             // single sort option - authority display name (else authority name if former is null)
-            Collections.sort(results, new AuthComparator(sortPairs.get(0).getSecond()));
+            Collections.sort(results, new AuthComparator((String) sortPairs.get(0).getFirst(), sortPairs.get(0).getSecond()));
         }
         
         return results;
     }
     
     // startsWith / ignoreCase
-    private boolean includeFilter(AuthorityInfo auth, AuthorityType type, String nameFilterLower)
+    private boolean includeFilter(AuthorityInfo auth, AuthorityType type, Pattern nameFilter)
     {
         String authName = auth.getAuthorityName();
         
@@ -187,23 +239,28 @@ public class GetAuthoritiesCannedQuery extends AbstractCannedQueryPermissions<Au
             return false;
         }
         
-        if (nameFilterLower == null)
+        if (nameFilter == null)
         {
             return true;
         }
         
-        String authDisplayNameLower = (auth.getAuthorityDisplayName() != null ? auth.getAuthorityDisplayName().toLowerCase() : null);
-        if ((authDisplayNameLower != null) && (authDisplayNameLower.startsWith(nameFilterLower)))
+        String displayName = auth.getAuthorityDisplayName();
+        if (displayName != null && nameFilter.matcher(displayName).find())
         {
             return true;
         }
+//        To match on just displayName use the following.
+//        if (displayName != null)
+//        {
+//            return nameFilter.matcher(displayName).find();
+//        }
         
         if (authType.isPrefixed())
         {
             authName = authName.substring(authType.getPrefixString().length());
         }
         
-        return (authName.toLowerCase().startsWith(nameFilterLower));
+        return (nameFilter.matcher(authName).find());
     }
     
     private interface QueryCallback
@@ -230,7 +287,7 @@ public class GetAuthoritiesCannedQuery extends AbstractCannedQueryPermissions<Au
             }
             
             // Call back
-            boolean more = resultsCallback.handle(new AuthorityInfo(tenantService.getBaseName(result.getNode().getNodeRef()), 
+            boolean more = resultsCallback.handle(new AuthorityInfo(result.getId(), 
                                                                     result.getAuthorityDisplayName(), 
                                                                     result.getAuthorityName()));
             if (!more)
